dfir_rs/tests/compile-fail-stable/surface_forwardref_chain_double.rs
../compile-fail/surface_forwardref_chain_double.rs